--- a/client/public/guidelines.html
+++ b/client/public/guidelines.html
@@ -3,72 +3,111 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fullerton Connect — Community Guidelines</title>
+  <title>UniVerse — Community Guidelines</title>
   <meta name="robots" content="noindex" />
   <style>
     :root{
-      --fg:#111827;
-      --muted:#4b5563;
-      --bg:#ffffff;
-      --card:#f9fafb;
-      --link:#0ea5e9;
-      --border:#e5e7eb;
-      --pill-bg:#eef2ff;
-      --pill-fg:#111827;
+      --fg:#E6E9FF;
+      --muted:#A3A8C6;
+      --bg:#050510;
+      --card:#0F1329;
+      --link:#8B7BFF;
+      --border:#1a2147;
+      --pill-bg:#2E1E57;
+      --pill-fg:#FFFFFF;
     }
     html,body{
-      margin:0;padding:0;background:var(--bg);color:var(--fg);
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,'Helvetica Neue',Arial,'Noto Sans',sans-serif;
+      margin:0;padding:0;
+      background:radial-gradient(1000px 600px at 10% 10%, rgba(123, 92, 255, 0.12) 0%, rgba(123,92,255,0) 60%),
+                 radial-gradient(900px 520px at 85% 80%, rgba(89, 208, 255, 0.10) 0%, rgba(89,208,255,0) 60%),
+                 radial-gradient(700px 400px at 20% 85%, rgba(255,255,255,0.045) 0%, rgba(255,255,255,0) 60%),
+                 linear-gradient(180deg, #050510 0%, #0B1D3A 60%, #2E1E57 100%);
+      color:var(--fg);
+      font-family:-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto',system-ui,sans-serif;
       line-height:1.6;
     }
     .container{max-width:980px;margin:0 auto;padding:48px 20px;}
-    /* Headings always readable */
-    header h1, h1, h2, h3, h4, h5, h6{ color:var(--fg) !important; }
-    header h1 *, h1 *, h2 *, h3 *, h4 *, h5 *, h6 *{ color:inherit !important; }
+
+    header h1, h1, h2, h3, h4, h5, h6{
+      color:#FFFFFF !important;
+    }
+    header h1 *, h1 *, h2 *, h3 *, h4 *, h5 *, h6 *{
+      color:inherit !important;
+    }
 
     header h1{font-size:2rem;margin:0 0 4px 0;}
     header p{margin:0;color:var(--muted);}
     .notice{font-size:.95rem;color:var(--muted);margin-top:12px;}
 
-    nav.toc{background:var(--card);border:1px solid var(--border);border-radius:12px;padding:16px 18px;margin:28px 0;}
-    nav.toc h2{font-size:1rem;margin:0 0 8px 0;color:var(--muted);text-transform:uppercase;letter-spacing:.06em;}
+    nav.toc{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:16px 18px;
+      margin:28px 0;
+      box-shadow:0 18px 40px rgba(0,0,0,0.45);
+    }
+    nav.toc h2{
+      font-size:1rem;margin:0 0 8px 0;color:var(--muted);
+      text-transform:uppercase;letter-spacing:.06em;
+    }
     nav.toc ol, nav.toc ul{margin:0;padding-left:18px;}
     nav.toc a{color:var(--link);text-decoration:none;}
+    nav.toc a:hover{text-decoration:underline;}
 
     section{margin:26px 0;padding-top:6px;}
-    h2{margin:22px 0 8px 0;font-size:1.25rem;}
-    h3{margin:18px 0 6px 0;font-size:1.05rem;}
+    h2{margin:22px 0 8px 0;font-size:1.35rem;}
+    h3{margin:18px 0 6px 0;font-size:1.1rem;}
     ul{padding-left:22px;margin:8px 0;}
     li{margin:6px 0;}
     a{color:var(--link);}
 
-    .foot{margin-top:48px;border-top:1px solid var(--border);padding-top:16px;color:var(--muted);font-size:.9rem;}
-
-    /* Pills/labels keep a soft tint but dark text for contrast */
-    .tag, .pill, .badge, .label, mark{
-      display:inline-block;font-size:.82rem;background:var(--pill-bg);
-      color:var(--pill-fg) !important;border-radius:6px;padding:2px 8px;vertical-align:middle;font-weight:700;
+    .foot{
+      margin-top:48px;
+      border-top:1px solid var(--border);
+      padding-top:16px;
+      color:var(--muted);
+      font-size:.9rem;
     }
 
-    /* Print */
+    .tag, .pill, .badge, .label, mark{
+      display:inline-block;font-size:.82rem;
+      background:var(--pill-bg);
+      color:var(--pill-fg) !important;
+      border-radius:6px;
+      padding:2px 8px;
+      vertical-align:middle;
+      font-weight:700;
+    }
+
     @media print{
-      nav.toc{break-inside:avoid;}
+      body{background:#000;color:#fff;}
+      nav.toc{break-inside:avoid;box-shadow:none;}
       .container{padding:0;}
-      a{color:black;text-decoration:underline;}
+      a{color:#fff;text-decoration:underline;}
     }
   </style>
 </head>
 <body>
   <main id="guidelines" class="container">
     <header>
-      <h1>Fullerton Connect — Community Guidelines</h1>
-      <p class="notice"><em>Last updated: September 29, 2025</em></p>
-      <p class="notice">Purpose: Keep Fullerton Connect welcoming, useful, and safe for the Fullerton, CA community. We’re unaffiliated with CSUF.</p>
-      These Guidelines are part of our
-      <a href="/terms" data-legal-doc="terms">Terms of Service</a>.
-      Please also review our
-      <a href="/privacy" data-legal-doc="privacy">Privacy Policy</a>.
-      <p class="notice"><span class="tag">Independent website — not affiliated with CSUF</span></p>
+      <h1>UniVerse — Community Guidelines</h1>
+      <p class="notice"><em>Last updated: 12/10/2025</em></p>
+      <p class="notice">
+        UniVerse is an independent social platform for students across the United States.
+        We are <strong>not affiliated with, endorsed by, or operated by any university</strong>.
+        These Guidelines are here to keep UniVerse welcoming, useful, and safe as our
+        multi-campus community grows.
+      </p>
+      <p class="notice">
+        These Guidelines are part of our
+        <a href="/terms" data-legal-doc="terms">Terms of Service</a>.
+        Please also review our
+        <a href="/privacy" data-legal-doc="privacy">Privacy Policy</a>.
+      </p>
+      <p class="notice">
+        <span class="tag">Independent platform — operating at Uni-verse.social</span>
+      </p>
     </header>
 
     <nav class="toc" aria-label="Contents">
@@ -88,7 +127,7 @@
         </li>
         <li><a href="#feature-rules">Feature-Specific Rules</a>
           <ul>
-            <li><a href="#swipe">Swipe/Match (Profile Photos)</a></li>
+            <li><a href="#swipe">Profiles &amp; Matching</a></li>
             <li><a href="#dms">DMs</a></li>
             <li><a href="#clubs-events">Clubs &amp; Events</a></li>
             <li><a href="#marketplace">Marketplace</a></li>
@@ -109,9 +148,9 @@
       <ul>
         <li><strong>Be respectful.</strong> No harassment, threats, hate, or targeted abuse.</li>
         <li><strong>Be authentic.</strong> No impersonation, fake engagement, or scams.</li>
-        <li><strong>Be lawful.</strong> Follow laws and CSUF/city rules when applicable.</li>
+        <li><strong>Be lawful.</strong> Follow applicable laws and campus rules where relevant.</li>
         <li><strong>Be safe.</strong> No endangering others, doxxing, or non-consensual content.</li>
-        <li><strong>Be relevant.</strong> Keep content local to the Fullerton community.</li>
+        <li><strong>Be relevant.</strong> Keep content appropriate for a nationwide student community.</li>
       </ul>
     </section>
 
@@ -121,7 +160,7 @@
       <h3 id="safety">Safety &amp; Harm</h3>
       <ul>
         <li>Violence or credible threats; incitement to harm.</li>
-        <li>Suicide or self-harm promotion (we may surface help lines).</li>
+        <li>Suicide or self-harm promotion (we may surface help lines or resources).</li>
         <li>Sexual exploitation or sexualized content involving minors (zero tolerance).</li>
         <li>Dangerous activities encouraging injury or property damage.</li>
       </ul>
@@ -130,30 +169,31 @@
       <ul>
         <li>Bullying, stalking, dogpiling, or glorifying violence.</li>
         <li>Slurs, stereotypes, or dehumanization targeting protected classes.</li>
-        <li>Content intended to shame private individuals (doxxing, revenge porn).</li>
+        <li>Content intended to shame private individuals (including non-consensual intimate imagery).</li>
       </ul>
 
       <h3 id="privacy-consent">Privacy &amp; Consent</h3>
       <ul>
         <li>Non-consensual intimate imagery; upskirting; hidden-camera content.</li>
-        <li>Sharing private info (address, phone, student IDs) without consent.</li>
+        <li>Sharing private info (home address, phone, student IDs, personal email) without consent.</li>
+        <li>Posting images of others without permission in sensitive or embarrassing contexts.</li>
       </ul>
 
       <h3 id="illegal">Illegal or Prohibited Transactions</h3>
       <p>Includes (not exhaustive):</p>
       <ul>
-        <li>Weapons, ammunition, explosives; drugs or paraphernalia;</li>
-        <li>Counterfeit or stolen goods; human/animal parts;</li>
-        <li>Adult sexual content/services; alcohol or tobacco;</li>
-        <li>Recalled/unsafe items; financial instruments or personal data;</li>
-        <li>Academic cheating materials; anything illegal or banned by campus housing policies.</li>
+        <li>Weapons, ammunition, explosives; illegal drugs or paraphernalia.</li>
+        <li>Counterfeit or stolen goods; human/animal parts.</li>
+        <li>Adult sexual content/services; alcohol or tobacco where prohibited.</li>
+        <li>Recalled/unsafe items; financial instruments or personal data.</li>
+        <li>Academic cheating materials; anything illegal or banned by housing/campus policies.</li>
       </ul>
 
       <h3 id="integrity">Platform Integrity</h3>
       <ul>
         <li>Spam, phishing, malware, or coordinated inauthentic behavior.</li>
         <li>Evasion of bans, selling accounts, or mass-creating throwaways.</li>
-        <li>Buying/selling coins outside approved channels.</li>
+        <li>Buying/selling UniVerse coins or items outside approved channels.</li>
       </ul>
 
       <h3 id="ip">Intellectual Property</h3>
@@ -162,17 +202,20 @@
       </ul>
 
       <h3 id="misinfo">Misinformation in Emergencies</h3>
-      <p>False claims that would reasonably cause harm (e.g., fake emergency alerts). We may label, reduce reach, or remove.</p>
+      <p>
+        False claims that would reasonably cause harm (e.g., fake emergency alerts, evacuation notices)
+        may be labeled, downranked, or removed. We may act quickly where safety is involved.
+      </p>
     </section>
 
     <section id="feature-rules">
       <h2>Feature-Specific Rules</h2>
 
-      <h3 id="swipe">Swipe/Match (Profile Photos)</h3>
+      <h3 id="swipe">Profiles &amp; Matching</h3>
       <ul>
         <li>Use your own recent photo or one you have rights to.</li>
         <li>No explicit nudity or sexual content.</li>
-        <li>No minors-only photos that could be misused; do not upload others without consent.</li>
+        <li>No minors-only photos meant for adults; do not upload others without consent.</li>
       </ul>
 
       <h3 id="dms">DMs</h3>
@@ -183,8 +226,8 @@
 
       <h3 id="clubs-events">Clubs &amp; Events</h3>
       <ul>
-        <li>Be accurate about time/place; don’t imply CSUF sponsorship without written authorization.</li>
-        <li>Follow venue rules, permits, and noise/curfew laws.</li>
+        <li>Be accurate about time/place; don’t imply university sponsorship without written authorization.</li>
+        <li>Follow venue rules, permits, and local laws.</li>
         <li>No hazing or coercion.</li>
       </ul>
 
@@ -192,7 +235,7 @@
       <ul>
         <li>Follow the Prohibited Items list.</li>
         <li>Use in-app messaging; meet in public; keep receipts.</li>
-        <li>Listings must be local, truthful, and priced in USD.</li>
+        <li>Listings must be truthful, local to your area, and priced in USD.</li>
       </ul>
 
       <h3 id="games">Live Multiplayer Games</h3>
@@ -205,19 +248,23 @@
     <section id="reporting">
       <h2>Reporting &amp; Moderation</h2>
       <ul>
-        <li>Report content or users via in-app tools or <a href="mailto:abuse@fullertonconnect.com">abuse@fullertonconnect.com</a>.</li>
-        <li>We use automated systems + human review.</li>
-        <li>Possible actions: label/blur, remove, limit features, warnings/strikes, suspensions, bans, device/number blocks.</li>
-        <li>You may appeal certain decisions in the app.</li>
+        <li>Report content or users via in-app tools or at <a href="mailto:abuse@uni-verse.social">abuse@uni-verse.social</a>.</li>
+        <li>We use a mix of automated systems and human review.</li>
+        <li>Actions can include: labeling/blur, removal, feature limits, warnings/strikes, suspensions, bans, or device/number blocks.</li>
+        <li>You may be able to appeal certain decisions in the app.</li>
       </ul>
     </section>
 
     <section id="age-identity">
       <h2>Age, Identity, and Verification</h2>
       <ul>
-        <li>13+ only. If you’re under 13, do not use the app.</li>
-        <li>We may verify via email and SMS codes. Don’t share verification codes.</li>
-        <li>Do not impersonate CSUF staff or other individuals.</li>
+        <li>13+ only. If you’re under 13, do not use UniVerse.</li>
+        <li>
+          We may verify that you’re a student or eligible user using your email (for example, certain
+          school domains) and SMS codes. Using a student email does <strong>not</strong> mean your
+          school operates or endorses UniVerse.
+        </li>
+        <li>Do not impersonate university staff, administrators, or other individuals.</li>
       </ul>
     </section>
 
@@ -225,24 +272,25 @@
       <h2>Ads, Promotions, and Self-Promotion</h2>
       <ul>
         <li>Disclose paid partnerships and follow applicable laws and guidelines.</li>
-        <li>No deceptive or illegal promotions.</li>
-        <li>Ads may appear in sidebars and placements; we don’t endorse third-party products.</li>
+        <li>No deceptive, misleading, or illegal promotions.</li>
+        <li>Ads that appear in UniVerse do not mean we endorse third-party products.</li>
       </ul>
     </section>
 
     <section id="safety-reminders">
       <h2>Safety Reminders</h2>
       <ul>
-        <li>Meet in public, well-lit places; tell a friend; keep chats in-app.</li>
-        <li>Never share passwords or verification codes.</li>
-        <li>Call 911 in an emergency.</li>
+        <li>Meet in public, well-lit places; tell a friend where you’re going.</li>
+        <li>Keep chats in-app until you trust someone.</li>
+        <li>Never share passwords or verification codes with anyone.</li>
+        <li>Call 911 or your local emergency number in an emergency.</li>
       </ul>
     </section>
 
     <section id="consequences">
       <h2>Consequences</h2>
       <ul>
-        <li>Repeated or severe violations can lead to permanent ban.</li>
+        <li>Repeated or severe violations can lead to a permanent ban.</li>
         <li>We may notify law enforcement where required or appropriate.</li>
         <li>Attempts to evade enforcement (new accounts, device spoofing) may result in broader blocks.</li>
       </ul>
@@ -251,8 +299,8 @@
     <section id="final-notes">
       <h2>Final Notes</h2>
       <ul>
-        <li>We may update these Guidelines; material changes will be announced in-app.</li>
-        <li>Not affiliated with CSUF. Use of the app does not create any relationship with the university.</li>
+        <li>We may update these Guidelines; material changes may be announced in-app.</li>
+        <li>UniVerse is an independent project and is not affiliated with any college or university.</li>
       </ul>
     </section>
 
